# cc-analyst

./: .coverage  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  test_runner.py
.github/workflows.disabled/: ci.yml  release.yml
src/: __init__.py  app.py  claude_processor.py  data_manager.py  data_source_interface.py  logger_config.py  mcp_ecb_server.py
src/data_sources/: ecb_data_source.py
tests/: conftest.py  test_app.py  test_claude_processor.py  test_integration.py  test_mcp_ecb_server.py
